<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryDetails">

    <TableLayout
        android:id="@+id/tvhdTableLayout"
        android:layout_width="380dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHdProductLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/product_label_history_detail"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvHdProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/history_detail_product_name"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHdQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/history_detail_quantity_label"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvHdQuantityQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/history_detail_quantity_amount"
                android:textSize="20sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:id="@+id/tvHdPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/price_history_detail"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvHdPricePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price_amount_history_detail"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHdPurchaseDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/history_detail_label"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHdPurchaseDateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/history_detail_date"
                android:paddingHorizontal="10dp"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>