<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestockActivity">

    <EditText
        android:id="@+id/editTextRestock"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/restock_edittext_enter_new_quantity"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/buttonOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restock_button_okay"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRestock"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.1"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restock_button_cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@id/editTextRestock"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.9"
         />

    <ListView
        android:id="@+id/listviewRestock"
        android:layout_width="406dp"
        android:layout_height="422dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3529412" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5060827" />

    <TextView
        android:id="@+id/textViewRestock"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:hint="selected Product"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestock"
        app:layout_constraintVertical_bias="0.8"
        />
</androidx.constraintlayout.widget.ConstraintLayout>